[package]
name = "sqlight"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
  "crates/aceditor", 
  "crates/floating-ui", 
  "crates/istyles",
  "crates/split-grid"
]

[dependencies]
istyles = { path = "crates/istyles" }
aceditor = { path = "crates/aceditor" }
split-grid = { path = "crates/split-grid" }
floating-ui = { path = "crates/floating-ui" }

sqlite-wasm-rs = { version = "0.4.1", default-features = false, optional = true }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = ["csr"] }
reactive_stores = "0.2.2"
thiserror = "2.0.12"
serde = "1.0.219"
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = ["BlobPropertyBag", "Clipboard", "DedicatedWorkerGlobalScope", "DomException", "File", "FileList", "HtmlSelectElement", "MediaQueryList", "Navigator", "Storage", "Worker", "WorkerOptions", "WorkerType"] }
serde-wasm-bindgen = "0.6.5"
parking_lot = "0.12.3"
once_cell = "1.21.3"
tokio = { version = "1.45.0", features = ["sync"] }
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
console_log = "1.0.0"
log = "0.4.27"
fragile = "2.0.1"
hex = "0.4.3"
prettytable-rs = "0.10.0"
sqlformat = "0.3.5"
wasm-array-cp = "0.1.1"

[features]
default = ["sqlite3"]
sqlite3 = ["sqlite-wasm-rs/precompiled"]
sqlite3mc = ["sqlite-wasm-rs/sqlite3mc"]
